[package]
name = "tokio-timerfd"
version = "0.1.2"
authors = ["Alexander Polakov <plhk@sdf.org>"]
edition = "2018"
description = "timerfd support for tokio"
license = "MIT"
documentation = "https://docs.rs/tokio-timerfd"
repository = "https://github.com/polachok/tokio-timerfd"
homepage = "https://github.com/polachok/tokio-timerfd"
readme = "README.md"
categories = ["asynchronous", "os", "os::unix-apis"]
keywords = ["timerfd", "timers"]

[dependencies]
tokio = { version = "0.2", features = ["io-util", "io-driver", "sync"] }
mio = "0.6"
timerfd = "1.0"
futures-core = "0.3"
futures-util = "0.3"
slab = "0.4"

[dev-dependencies]
tokio = { version = "0.2", features = ["io-util", "io-driver", "sync", "test-util", "macros", "rt-threaded", "stream"] }
