[package]
name = "tokio-timerfd"
version = "0.2.0"
authors = ["Alexander Polakov <plhk@sdf.org>"]
edition = "2018"
description = "timerfd support for tokio"
license = "MIT"
documentation = "https://docs.rs/tokio-timerfd"
repository = "https://github.com/polachok/tokio-timerfd"
homepage = "https://github.com/polachok/tokio-timerfd"
readme = "README.md"
categories = ["asynchronous", "os", "os::unix-apis"]
keywords = ["timerfd", "timers"]

[features]
boottime = []
realtime = []

[dependencies]
tokio = { version = "1.0", features = ["net"] }
timerfd = "1.0"
futures-core = "0.3"
slab = "0.4"
libc = "0.2"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "test-util"] }
futures = "0.3"
